Update all git integration bp identifiers

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_pull_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_pull_request_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "pullRequest",
+  "identifier": "bitbucketPullRequest",
   "title": "Pull Request",
   "icon": "GitVersion",
   "schema": {
@@ -54,7 +54,7 @@
   "relations": {
     "repository": {
       "title": "Repository",
-      "target": "repository",
+      "target": "bitbucketRepository",
       "required": false,
       "many": false
     }
