--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_pull_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_pull_request_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "pullRequest",
+  "identifier": "githubPullRequest",
   "title": "Pull Request",
   "schema": {
     "properties": {
@@ -56,7 +56,7 @@
   "relations": {
     "repository": {
       "title": "Repository",
-      "target": "repository",
+      "target": "githubRepository",
       "required": false,
       "many": false
     }
