--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_deployment_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_deployment_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "deployment",
+  "identifier": "githubDeployment",
   "title": "Deployment",
   "icon": "Deployment",
   "schema": {
@@ -47,7 +47,7 @@
   "relations": {
     "environment": {
       "title": "Environment",
-      "target": "repoEnvironment",
+      "target": "githubRepoEnvironment",
       "required": false,
       "many": false
     }
