--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_environment_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_environment_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "repoEnvironment",
+  "identifier": "githubRepoEnvironment",
   "title": "Repository Environment",
   "icon": "Environment",
   "schema": {
@@ -40,7 +40,7 @@
   "calculationProperties": {},
   "relations": {
     "repository": {
-      "target": "repository",
+      "target": "githubRepository",
       "required": true,
       "many": false
     }
