--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_git_exporter_example_issue_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_git_exporter_example_issue_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "issue",
+  "identifier": "githubIssue",
   "title": "Issue",
   "icon": "Github",
   "schema": {
@@ -65,7 +65,7 @@
   "calculationProperties": {},
   "relations": {
     "repository": {
-      "target": "repository",
+      "target": "githubRepository",
       "required": true,
       "many": false
     }
