--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_pull_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_pull_request_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "pull_request",
+  "identifier": "githubPullRequest",
   "title": "Pull Request",
   "icon": "Github",
   "schema": {
@@ -57,7 +57,7 @@
   "relations": {
     "repository": {
       "title": "Repository",
-      "target": "repository",
+      "target": "githubRepository",
       "required": false,
       "many": false
     }
