--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_exporter_example_repository_with_teams_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_exporter_example_repository_with_teams_port_app_config.mdx
@@ -30,7 +30,7 @@ resources:
         mappings:
           identifier: .name
           title: .name
-          blueprint: '"repository"'
+          blueprint: '"githubRepository"'
           properties:
             readme: file://README.md
             url: .html_url
