--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_git_exporter_example_workflow_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_git_exporter_example_workflow_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "workflow",
+  "identifier": "githubWorkflow",
   "title": "Workflow",
   "icon": "Github",
   "schema": {
@@ -54,7 +54,7 @@
   "calculationProperties": {},
   "relations": {
     "repository": {
-      "target": "repository",
+      "target": "githubRepository",
       "required": true,
       "many": false
     }
