--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_git_exporter_example_workflow_run_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_git_exporter_example_workflow_run_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "workflowRun",
+  "identifier": "githubWorkflowRun",
   "title": "Workflow Run",
   "icon": "Github",
   "schema": {
@@ -103,7 +103,7 @@
   "calculationProperties": {},
   "relations": {
     "workflow": {
-      "target": "workflow",
+      "target": "githubWorkflow",
       "required": true,
       "many": false
     }
