--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_merge_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_merge_request_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "mergeRequest",
+  "identifier": "gitlabMergeRequest",
   "title": "Merge Request",
   "icon": "GitVersion",
   "schema": {
@@ -42,7 +42,7 @@
   },
   "relations": {
     "repository": {
-      "target": "repository",
+      "target": "gitlabRepository",
       "required": false,
       "many": false
     }
