--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_git_exporter_example_issue_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_git_exporter_example_issue_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "issue",
+  "identifier": "gitlabIssue",
   "title": "Issue",
   "icon": "GitLab",
   "schema": {
@@ -57,7 +57,7 @@
   },
   "relations": {
     "repository": {
-      "target": "repository",
+      "target": "gitlabRepository",
       "title": "Repository",
       "required": true,
       "many": false
