--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_pipeline_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_pipeline_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "pipeline",
+  "identifier": "gitlabPipeline",
   "title": "Pipeline",
   "icon": "GitLab",
   "schema": {
@@ -71,8 +71,8 @@
   "calculationProperties": {},
   "relations": {
     "repository": {
-      "title": "Repository"
-      "target": "repository",
+      "title": "Repository",
+      "target": "gitlabRepository",
       "required": true,
       "many": false
     }
