--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_deployments_and_environments_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_deployments_and_environments_port_app_config.mdx
@@ -13,7 +13,7 @@ resources:
         mappings:
           identifier: ".name" # The Entity identifier will be the repository name.
           title: ".name"
-          blueprint: '"repository"'
+          blueprint: '"githubRepository"'
           properties:
             readme: file://README.md
             url: .html_url
@@ -26,7 +26,7 @@ resources:
         mappings:
           identifier: .repo + '-' + .name
           title: .name
-          blueprint: '"repoEnvironment"'
+          blueprint: '"githubRepoEnvironment"'
           properties:
             url: .html_url
             customBranchesPolicies: .custom_branches_policies
@@ -43,7 +43,7 @@ resources:
         mappings:
           identifier: .repo + '-' + (.id|tostring)
           title: .task + '-' + .environment
-          blueprint: '"deployment"'
+          blueprint: '"githubDeployment"'
           properties:
             description: .description
             ref: .ref
