--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "dependabotAlert",
+  "identifier": "githubDependabotAlert",
   "title": "Dependabot Alert",
   "icon": "Github",
   "schema": {
