--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
@@ -12,7 +12,7 @@ resources:
         mappings:
           identifier: .name
           title: .name
-          blueprint: '"repository"'
+          blueprint: '"githubRepository"'
           properties:
             readme: file://README.md
             url: .html_url
@@ -25,7 +25,7 @@ resources:
         mappings:
           identifier: .repo.name + "-" + (.number | tostring)
           title: .number | tostring
-          blueprint: '"dependabotAlert"'
+          blueprint: '"githubDependabotAlert"'
           properties:
             state: .state
             severity: .security_advisory.severity
