--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_folder_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_folder_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "folder",
+  "identifier": "githubFolder",
   "title": "Folder",
   "icon": "Github",
   "schema": {
@@ -26,7 +26,7 @@
   "relations": {
     "repository": {
       "title": "Repository",
-      "target": "repository",
+      "target": "githubRepository",
       "required": false,
       "many": false
     }
