--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_repo_folders_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_repo_folders_port_app_config.mdx
@@ -12,7 +12,7 @@ resources:
         mappings:
           identifier: .name
           title: .name
-          blueprint: '"repository"'
+          blueprint: '"githubRepository"'
           properties:
             readme: file://README.md
             url: .html_url
@@ -25,7 +25,7 @@ resources:
         mappings:
           identifier: .head.repo.name + (.id|tostring)
           title: .title
-          blueprint: '"pull_request"'
+          blueprint: '"githubPullRequest"'
           properties:
             creator: .user.login
             assignees: "[.assignees[].login]"
@@ -51,7 +51,7 @@ resources:
         mappings:
           identifier: .folder.name
           title: .folder.name
-          blueprint: '"folder"'
+          blueprint: '"githubFolder"'
           properties:
             url: >-
               .repo.html_url + "/tree/" + .repo.default_branch  + "/" +
