--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_export_example_repository_with_teams_relation_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_export_example_repository_with_teams_relation_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "repository",
+  "identifier": "githubRepository",
   "title": "Repository",
   "icon": "Microservice",
   "schema": {
