--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_github_exporter_example_wf_wfr_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_github_exporter_example_wf_wfr_port_app_config.mdx
@@ -12,7 +12,7 @@ resources:
         mappings:
           identifier: ".name" # The Entity identifier will be the repository name.
           title: ".name"
-          blueprint: '"repository"'
+          blueprint: '"githubRepository"'
           properties:
             readme: file://README.md
             url: .html_url
@@ -25,7 +25,7 @@ resources:
         mappings:
           identifier: ".repo + (.id|tostring)"
           title: ".name"
-          blueprint: '"workflow"'
+          blueprint: '"githubWorkflow"'
           properties:
             path: ".path"
             status: ".state"
@@ -42,7 +42,7 @@ resources:
         mappings:
           identifier: ".repository.name + (.id|tostring)"
           title: ".display_title"
-          blueprint: '"workflowRun"'
+          blueprint: '"githubWorkflowRun"'
           properties:
             name: ".name"
             triggeringActor: ".triggering_actor.login"
