--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_job_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_job_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "job",
+  "identifier": "gitlabJob",
   "title": "Job",
   "icon": "GitLab",
   "schema": {
@@ -66,7 +66,7 @@
   "calculationProperties": {},
   "relations": {
     "pipeline": {
-      "target": "pipeline",
+      "target": "gitlabPipeline",
       "required": false,
       "many": false
     }
