--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-repository-folders/_gitlab_export_example_monorepo_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-repository-folders/_gitlab_export_example_monorepo_port_app_config.mdx
@@ -17,7 +17,7 @@ resources:
         mappings:
           identifier: .folder.name
           title: .folder.name
-          blueprint: '"project"'
+          blueprint: '"gitlabProject"'
           properties:
             url: >-
               .repo.web_url + "/tree/" + .repo.default_branch  + "/" +
