--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-repository-folders/_gitlab_exporter_example_folder_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-repository-folders/_gitlab_exporter_example_folder_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "folder",
+  "identifier": "gitlabFolder",
   "title": "Folder",
   "icon": "Gitlab",
   "schema": {
@@ -26,7 +26,7 @@
   "relations": {
     "repository": {
       "title": "Repository",
-      "target": "repository",
+      "target": "gitlabRepository",
       "required": false,
       "many": false
     }
