--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-repository-folders/_gitlab_exporter_example_repo_folders_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-repository-folders/_gitlab_exporter_example_repo_folders_port_app_config.mdx
@@ -12,7 +12,7 @@ resources:
         mappings:
           identifier: .name
           title: .name
-          blueprint: '"repository"'
+          blueprint: '"gitlabRepository"'
           properties:
             readme: file://README.md
             url: .web_url
@@ -30,7 +30,7 @@ resources:
         mappings:
           identifier: .folder.name
           title: .folder.name
-          blueprint: '"folder"'
+          blueprint: '"gitlabFolder"'
           properties:
             url: >-
               .repo.web_url + "/tree/" + .repo.default_branch  + "/" +
