Make more updates

--- a/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/compute_resources/_container_app_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/compute_resources/_container_app_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "containerApp",
+  "identifier": "azureContainerApp",
   "description": "This blueprint represents an Azure Container App in our software catalog",
   "title": "Container App",
   "icon": "Azure",
@@ -45,7 +45,7 @@
   "calculationProperties": {},
   "relations": {
     "resourceGroup": {
-      "target": "resourceGroup",
+      "target": "azureResourceGroup",
       "title": "Resource Group",
       "required": false,
       "many": false
