--- a/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/compute_resources/_virtual_machine_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/compute_resources/_virtual_machine_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "virtualMachine",
+  "identifier": "azureVirtualMachine",
   "description": "This blueprint represents an Azure Virtual Machine in our software catalog",
   "title": "Virtual Machine",
   "icon": "Azure",
@@ -72,7 +72,7 @@
   "calculationProperties": {},
   "relations": {
     "resourceGroup": {
-      "target": "resourceGroup",
+      "target": "azureResourceGroup",
       "title": "Resource Group",
       "required": false,
       "many": false
