--- a/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/database_resources/_postgres_flexible_server_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/database_resources/_postgres_flexible_server_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "postgresFlexibleServer",
+  "identifier": "azurePostgresFlexibleServer",
   "description": "This blueprint represents an Azure Postgres Flexible Server in our software catalog",
   "title": "Postgres Flexible Server",
   "icon": "Azure",
@@ -56,7 +56,7 @@
   "calculationProperties": {},
   "relations": {
     "resourceGroup": {
-      "target": "resourceGroup",
+      "target": "azureResourceGroup",
       "title": "Resource Group",
       "required": false,
       "many": false
