--- a/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/resource_group/_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/resource_group/_blueprint.mdx
@@ -4,7 +4,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "resourceGroup",
+  "identifier": "azureResourceGroup",
   "description": "This blueprint represents an Azure Resource Group in our software catalog",
   "title": "Resource Group",
   "icon": "Azure",
