--- a/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/storage/_storage_account_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/storage/_storage_account_blueprint.mdx
@@ -4,7 +4,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "storageAccount",
+  "identifier": "azureStorageAccount",
   "description": "This blueprint represents an Azure Storage Account in our software catalog",
   "title": "Storage Account",
   "icon": "Azure",
@@ -78,7 +78,7 @@
   "calculationProperties": {},
   "relations": {
     "resourceGroup": {
-      "target": "resourceGroup",
+      "target": "azureResourceGroup",
       "title": "Resource Group",
       "required": false,
       "many": false
