--- a/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/storage/_storage_container_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/storage/_storage_container_blueprint.mdx
@@ -4,7 +4,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "storageContainer",
+  "identifier": "azureStorageContainer",
   "description": "This blueprint represents an Azure Storage Container in our software catalog",
   "title": "Storage Container",
   "icon": "Azure",
@@ -57,7 +57,7 @@
   "calculationProperties": {},
   "relations": {
     "storageAccount": {
-      "target": "storageAccount",
+      "target": "azureStorageAccount",
       "title": "Storage Account",
       "required": false,
       "many": false
