--- a/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/compute_resources/_aks_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/compute_resources/_aks_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
 {
-  "identifier": "aks",
+  "identifier": "azureAks",
   "description": "This blueprint represents an Azure Kubernetes Service in our software catalog",
   "title": "AKS",
   "icon": "Azure",
@@ -89,7 +89,7 @@
   "calculationProperties": {},
   "relations": {
     "resourceGroup": {
-      "target": "resourceGroup",
+      "target": "azureResourceGroup",
       "title": "Resource Group",
       "required": false,
       "many": false
