--- a/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/compute_resources/_load_balancer_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/cloud-providers/azure/examples/compute_resources/_load_balancer_blueprint.mdx
@@ -3,7 +3,7 @@
 
 ```json showLineNumbers
   {
-    "identifier": "loadBalancer",
+    "identifier": "azureLoadBalancer",
     "description": "This blueprint represents an Azure Load Balancer in our software catalog",
     "title": "Load Balancer",
     "icon": "Azure",
@@ -58,7 +58,7 @@
     "calculationProperties": {},
     "relations": {
       "resourceGroup": {
-        "target": "resourceGroup",
+        "target": "azureResourceGroup",
         "title": "Resource Group",
         "required": false,
         "many": false
