--- a/docs/build-your-software-catalog/sync-data-to-catalog/iac/terraform-cloud/_terraform_one_time_docker_parameters.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/iac/terraform-cloud/_terraform_one_time_docker_parameters.mdx
@@ -6,6 +6,6 @@
 | `OCEAN__INTEGRATION__CONFIG__APP_HOST`               | Your application's host url                                                                                        | ❌       |
 | `OCEAN__INITIALIZE_PORT_RESOURCES`                   | Default true, When set to false the integration will not create default blueprints and the port App config Mapping | ❌       |
 | `OCEAN__INTEGRATION__IDENTIFIER`                     | Change the identifier to describe your integration, if not set will use the default one                            | ❌       |
-| `OCEAN__PORT__CLIENT_ID`                             | Your port client id                                                                                                | ✅       |
-| `OCEAN__PORT__CLIENT_SECRET`                         | Your port client secret                                                                                            | ✅       |
-| `OCEAN__PORT__BASE_URL`                              | Your port base url, relevant only if not using the default port app                                                | ❌       |
+| `OCEAN__PORT__CLIENT_ID`                             | Your Port client id                                                                                                | ✅       |
+| `OCEAN__PORT__CLIENT_SECRET`                         | Your Port client secret                                                                                            | ✅       |
+| `OCEAN__PORT__BASE_URL`                              | Your Port base url, relevant only if not using the default Port app                                                | ❌       |
