Update blueprint identifiers

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/splitio/_example_splitio_impression_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/splitio/_example_splitio_impression_blueprint.mdx
@@ -1,6 +1,6 @@
 ```json showLineNumbers
 {
-  "identifier": "split_impression",
+  "identifier": "splitImpression",
   "description": "Blueprint for Split Impressions",
   "title": "Split Impression",
   "icon": "Webhook",
