--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/splitio/_example_splitio_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/splitio/_example_splitio_webhook_configuration.mdx
@@ -1,7 +1,7 @@
 ```json showLineNumbers
 [
   {
-    "blueprint": "split_impression",
+    "blueprint": "splitImpression",
     "itemsToParse": ".body",
     "entity": {
       "identifier": ".item.key + \"-\" + .item.time",
