--- a/docs/build-your-software-catalog/sync-data-to-catalog/kubernetes/templates/_template_installation.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/kubernetes/templates/_template_installation.mdx
@@ -3,10 +3,10 @@ helm chart.
 
 This script will help you with:
 
-- setting up your custom Port [blueprints](../../../define-your-data-model/setup-blueprint);
+- setting up your custom Port [blueprints](/build-your-software-catalog/define-your-data-model/setup-blueprint);
 - installing Port's k8s exporter using helm (check out the Helm
   chart's [source code](https://github.com/port-labs/helm-charts/tree/main/charts/port-k8s-exporter));
-- deploying your custom [integration resources configuration](../kubernetes.md#exporter-configuration-structure)
+- deploying your custom [integration resources configuration](/build-your-software-catalog/sync-data-to-catalog/kubernetes/kubernetes.md#exporter-configuration-structure)
 
 :::tip
 You can view the bash script [here](https://github.com/port-labs/template-assets/blob/main/kubernetes/install.sh).
