standardize capitalization for sidebar items, rename experiences to actions

--- a/docs/api-reference/api-reference.mdx
+++ b/docs/api-reference/api-reference.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 10
-title: API Reference
-sidebar_label: 🧪 API Reference
+title: API reference
+sidebar_label: 🧪 API reference
 ---
 
-# 🧪 API Reference
+# 🧪 API reference
 
 You can view and try out Port's REST API interface online by browsing to our [Swagger](https://api.getport.io)
