Update to base GitHub PR blueprint

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_pull_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_pull_request_blueprint.mdx
@@ -5,6 +5,7 @@
 {
   "identifier": "githubPullRequest",
   "title": "Pull Request",
+  "icon": "Github",
   "schema": {
     "properties": {
       "creator": {
