--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_supported_resources.mdx
@@ -2,6 +2,7 @@
 
 The following resources can be used to map data from GitLab, it is possible to reference any field that appears in the API responses linked below for the GitLab integration mapping configuration.
 
+- [`group`](https://docs.gitlab.com/ee/api/groups.html#list-groups)
 - [`project`](https://docs.gitlab.com/ee/api/groups.html#list-a-groups-projects)
 - [`merge-request`](https://docs.gitlab.com/ee/api/merge_requests.html#list-project-merge-requests)
 - [`pipeline`](https://docs.gitlab.com/ee/api/pipelines.html#list-project-pipelines)
