Fixed all bad imports and links

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
@@ -10,5 +10,6 @@
 - [`folder`](https://docs.github.com/en/rest/git/trees#get-a-tree)
 - [`team`](https://docs.github.com/en/rest/teams/teams#get-a-team-by-name)
 - [`dependabot-alert`](https://docs.github.com/en/rest/dependabot/alerts#list-dependabot-alerts-for-a-repository)
+- [`packages`](https://github.com/port-labs/example-github-packages)
 
 :::
