fix broken gitlab link and add blueprint info

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_merge_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_merge_request_blueprint.mdx
@@ -46,7 +46,9 @@
       "required": false,
       "many": false
     }
-  }
+  },
+  "mirrorProperties": {},
+  "calculationProperties": {},
 }
 ```
 
