Add codeQL and branch protection rules support

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
@@ -39,6 +39,23 @@ resources:
             references: "[.security_advisory.references[].url]"
           relations:
             repository: .repo.name
+  - kind: code-scanning-alerts
+    selector:
+      query: 'true'
+    port:
+      entity:
+        mappings:
+          identifier: .repo + (.number|tostring)
+          title: .rule.name
+          blueprint: '"code_scan_alerts"'
+          properties:
+            state: .state
+            severity: .rule.severity
+            tags: .rule.tags
+            description: .rule.description
+            url: .html_url
+          relations:
+            repository: .repo
 ```
 
 </details>
