--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
@@ -11,5 +11,6 @@
 - [`team`](https://docs.github.com/en/rest/teams/teams#get-a-team-by-name)
 - [`dependabot-alert`](https://docs.github.com/en/rest/dependabot/alerts#list-dependabot-alerts-for-a-repository)
 - [`packages`](https://github.com/port-labs/example-github-packages)
-
+- [`branches`](https://docs.github.com/en/rest/branches/branches#get-a-branch)
+- [`code-scanning`](https://docs.github.com/en/rest/code-scanning/code-scanning#list-code-scanning-alerts-for-a-repository)
 :::
