Change codeQL to code scan

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
@@ -45,7 +45,7 @@ resources:
     port:
       entity:
         mappings:
-          identifier: .repo + (.number|tostring)
+          identifier: .repo + "-" + (.number | tostring)
           title: .rule.name
           blueprint: '"code_scan_alerts"'
           properties:
