--- a/docs/build-your-software-catalog/sync-data-to-catalog/code-quality-security/_docker-parameters.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/code-quality-security/_docker-parameters.mdx
@@ -2,6 +2,7 @@
 | --------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------- |
 | `OCEAN__INTEGRATION__CONFIG__SONAR_API_TOKEN`       | The [SonarQube API token](https://docs.sonarsource.com/sonarqube/9.8/user-guide/user-account/generating-and-using-tokens/#generating-a-token)                                                                                                                                            | ✅       |
 | `OCEAN__INTEGRATION__CONFIG__SONAR_ORGANIZATION_ID` | The SonarQube [organization Key](https://docs.sonarsource.com/sonarcloud/appendices/project-information/#project-and-organization-keys) (Not required when using on-prem sonarqube instance)                                                                                             | ✅       |
+| `OCEAN__INTEGRATION__CONFIG__SONAR_IS_ON_PREMISE`   | A boolean value indicating whether the SonarQube instance is on-premise. The default value is false                                                                                                                                                                                      | ✅       |
 | `OCEAN__INTEGRATION__CONFIG__SONAR_URL`             | Required if using **On-Prem**, Your SonarQube instance URL                                                                                                                                                                                                                               | ❌       |
 | `OCEAN__PORT__CLIENT_ID`                            | Your port client id ([How to get the credentials](https://docs.getport.io/build-your-software-catalog/sync-data-to-catalog/api/#find-your-port-credentials))                                                                                                                             | ✅       |
 | `OCEAN__PORT__CLIENT_SECRET`                        | Your port client secret ([How to get the credentials](https://docs.getport.io/build-your-software-catalog/sync-data-to-catalog/api/#find-your-port-credentials))                                                                                                                         | ✅       |
