--- a/docs/build-your-software-catalog/sync-data-to-catalog/code-quality-security/_supported-resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/code-quality-security/_supported-resources.mdx
@@ -5,12 +5,7 @@ the API responses linked below for the mapping configuration.
 - `Project` - represents a SonarQube project. Retrieves data
   from [`components`](https://next.sonarqube.com/sonarqube/web_api/api/components), [`measures`](https://next.sonarqube.com/sonarqube/web_api/api/measures),
   and [`branches`](https://next.sonarqube.com/sonarqube/web_api/api/project_branches).
-- [`Issue`](https://next.sonarqube.com/sonarqube/web_api/api/issues)
-- `Analysis` - represents a SonarQube analysis and latest activity.
+- [`Issue`](https://next.sonarqube.com/sonarqube/web_api/api/issues) -  represents a SonarQube issue
+- `Analysis` - represents a SonarQube analysis and latest activity. For on-premise installation, the integration retrieves data from the [pull requests](https://next.sonarqube.com/sonarqube/web_api/api/project_pull_requests) and [measures](https://next.sonarqube.com/sonarqube/web_api/api/measures) API
 
-:::
-
-:::note
-The current version of the Sonarqube integration does not support the `analysis` kind for clients using on-premise
-Sonarqube installation.
 :::
