--- a/docs/build-your-software-catalog/sync-data-to-catalog/code-quality-security/_supported-resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/code-quality-security/_supported-resources.mdx
@@ -6,6 +6,6 @@ the API responses linked below for the mapping configuration.
   from [`components`](https://next.sonarqube.com/sonarqube/web_api/api/components), [`measures`](https://next.sonarqube.com/sonarqube/web_api/api/measures),
   and [`branches`](https://next.sonarqube.com/sonarqube/web_api/api/project_branches).
 - [`Issue`](https://next.sonarqube.com/sonarqube/web_api/api/issues) -  represents a SonarQube issue
-- `Analysis` - represents a SonarQube analysis and latest activity. For on-premise installation, the integration retrieves data from the [pull requests](https://next.sonarqube.com/sonarqube/web_api/api/project_pull_requests) and [measures](https://next.sonarqube.com/sonarqube/web_api/api/measures) API
-
+- `Saas Analysis` - represents analysis and latest activity in your SonarCloud environment. 
+- `On-premise Analysis` - since SonarQube doesn't offer a straightforward API for fetching analysis and latest activity in on-premise installations, our integration provides an alternative solution for on-premise installation. By utilizing the [pull requests](https://next.sonarqube.com/sonarqube/web_api/api/project_pull_requests) and [measures](https://next.sonarqube.com/sonarqube/web_api/api/measures) APIs, users can now visualize the results of scan analyses for each pull request.
 :::
