updated one time docker vars

--- a/docs/build-your-software-catalog/sync-data-to-catalog/project-management/_launchdarkly_one_time_docker_parameters.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/project-management/_launchdarkly_one_time_docker_parameters.mdx
@@ -1,6 +1,6 @@
 | Parameter                                           | Description                                                                                                        | Required |
 | --------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------ | -------- |
-| `OCEAN__INTEGRATION__CONFIG__LAUNCHDARKLY_HOST`  | Your Launchdarkly host. For example https://app.terraform.io                                                          | ✅       |
+| `OCEAN__INTEGRATION__CONFIG__LAUNCHDARKLY_HOST`  | Your Launchdarkly host. For example https://Launchdarkly.com                                                          | ✅       |
 | `OCEAN__INTEGRATION__CONFIG__LAUNCHDARKLY_TOKEN` | The Launchdarkly Cloud API token                                                                                      | ✅       |
 | `OCEAN__INTEGRATION__CONFIG__APP_HOST`              | Your application's host url                                                                                        | ❌       |
 | `OCEAN__INITIALIZE_PORT_RESOURCES`                  | Default true, When set to false the integration will not create default blueprints and the port App config Mapping | ❌       |
