create new azure devops section

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/azure-devops/_azuredevops_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/azure-devops/_azuredevops_exporter_supported_resources.mdx
@@ -1,6 +1,6 @@
-:::tip Available GitLab resources
+:::tip Available Azure DevOps resources
 
-The following resources can be used to map data from GitLab, it is possible to reference any field that appears in the API responses linked below for the GitLab integration mapping configuration.
+The following resources can be used to map data from Azure DevOps, it is possible to reference any field that appears in the API responses linked below for the GitLab integration mapping configuration.
 
 - [`group`](https://docs.gitlab.com/ee/api/groups.html#list-groups)
 - [`project`](https://docs.gitlab.com/ee/api/groups.html#list-a-groups-projects)
