--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/azure-devops/_azuredevops_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/azure-devops/_azuredevops_exporter_supported_resources.mdx
@@ -1,12 +1,13 @@
 :::tip Available Azure DevOps resources
 
-The following resources can be used to map data from Azure DevOps, it is possible to reference any field that appears in the API responses linked below for the GitLab integration mapping configuration.
+The following resources can be used to map data from Azure DevOps, it is possible to reference any field that appears in the API responses linked below for the Azure Devops integration api reference.
 
-- [`group`](https://docs.gitlab.com/ee/api/groups.html#list-groups)
-- [`project`](https://docs.gitlab.com/ee/api/groups.html#list-a-groups-projects)
-- [`merge-request`](https://docs.gitlab.com/ee/api/merge_requests.html#list-project-merge-requests)
-- [`pipeline`](https://docs.gitlab.com/ee/api/pipelines.html#list-project-pipelines)
-- [`job`](https://docs.gitlab.com/ee/api/jobs.html#list-project-jobs)
-- [`issue`](https://docs.gitlab.com/ee/api/issues.html#list-project-issues)
+- [`repository`](https://learn.microsoft.com/en-us/rest/api/azure/devops/git/repositories/list?view=azure-devops-rest-7.2&tabs=HTTP#gitrepository)
+- [`repository-policy`](https://learn.microsoft.com/en-us/rest/api/azure/devops/git/policy-configurations/get?view=azure-devops-rest-7.1#policyconfiguration)
+- [`project`](https://learn.microsoft.com/en-us/rest/api/azure/devops/core/projects/list?view=azure-devops-rest-7.1&tabs=HTTP#teamprojectreference)
+- [`pull-request`](https://learn.microsoft.com/en-us/rest/api/azure/devops/git/pull-requests/get-pull-requests?view=azure-devops-rest-7.1&tabs=HTTP#gitpullrequest)
+- [`pipeline`](https://learn.microsoft.com/en-us/rest/api/azure/devops/pipelines/pipelines/list?view=azure-devops-rest-7.2#pipeline)
+- [`team`](https://learn.microsoft.com/en-us/rest/api/azure/devops/core/teams/get-all-teams?view=azure-devops-rest-7.1&tabs=HTTP#webapiteam)
+- [`member`](https://learn.microsoft.com/en-us/rest/api/azure/devops/core/teams/get-team-members-with-extended-properties?view=azure-devops-rest-7.1&tabs=HTTP#teammember)
 
 :::
