--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/azure-devops/example-pipeline/_azuredevops_exporter_example_pipeline_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/azure-devops/example-pipeline/_azuredevops_exporter_example_pipeline_blueprint.mdx
@@ -3,80 +3,31 @@
 
 ```json showLineNumbers
 {
-  "identifier": "gitlabPipeline",
+  "identifier": "azureDevopsPipeline",
   "title": "Pipeline",
-  "icon": "GitLab",
+  "icon": "AzureDevops",
   "schema": {
     "properties": {
-      "createdAt": {
-        "title": "Created At",
+      "url": {
         "type": "string",
-        "format": "date-time"
+        "format": "url",
+        "title": "URL"
       },
-      "updatedAt": {
-        "title": "Updated At",
-        "type": "string",
-        "format": "date-time"
+      "revision": {
+        "type": "number",
+        "title": "Revision"
       },
-      "creator": {
-        "title": "Creator",
+      "folder": {
+        "title": "Folder",
         "type": "string"
-      },
-      "status": {
-        "title": "Status",
-        "type": "string",
-        "enum": [
-          "created",
-          "waiting_for_resource",
-          "preparing",
-          "pending",
-          "running",
-          "success",
-          "failed",
-          "canceled",
-          "skipped",
-          "manual",
-          "scheduled"
-        ],
-        "enumColors": {
-          "created": "yellow",
-          "waiting_for_resource": "yellow",
-          "preparing": "yellow",
-          "pending": "yellow",
-          "running": "yellow",
-          "success": "green",
-          "failed": "red",
-          "canceled": "red",
-          "skipped": "red",
-          "manual": "blue",
-          "scheduled": "blue"
-        }
-      },
-      "stages": {
-        "title": "Stages",
-        "type": "array",
-        "items": {
-          "type": "string"
-        }
-      },
-      "link": {
-        "title": "Link",
-        "type": "string",
-        "format": "url"
       }
     },
     "required": []
   },
   "mirrorProperties": {},
   "calculationProperties": {},
-  "relations": {
-    "repository": {
-      "title": "Repository",
-      "target": "gitlabRepository",
-      "required": true,
-      "many": false
-    }
-  }
+  "aggregationProperties": {},
+  "relations": {}
 }
 ```
 
